--- a/blogger/templates/blog/home.html
+++ b/blogger/templates/blog/home.html
@@ -1,7 +1,13 @@
 {% extends 'base.html' %}
 
 <!-- content  -->
-{% block content %} {% include './components/splash.html' %}
+{% block content %}
+
+<!-- include navbar -->
+{% include 'components/navbar.html' %}
+
+<!-- splash -->
+{% include './components/splash.html' %}
 
 <!-- posts -->
 <div class="container pt-5">
